--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ header {
   --black-gradient: -webkit-linear-gradient(180deg, #1c1c1c, #303030, #1c1c1c, #303030, #1c1c1c);
   --white: #ffffff;
   --secondary-white: #ececec;
-  --red: #c20203;
+  /* --red: #c20203; */
   --gold-gradient: -webkit-linear-gradient(100deg, #ceac68, #ceac68, #f0d4a4, #ceac68, #ceac68);
   --gold-gradient-hover: -webkit-linear-gradient(100deg, #a98c54, #a98c54, #d0b990, #a98c54, #a98c54);
   --box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%);
@@ -171,9 +171,29 @@ a {
 }
 
 /* ======================================================================= */
+/* =============================== SCROLLBAR ============================= */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--black-transparent);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--secondary-black);
+  border-radius: 20px;
+  border: 2px solid var(--primary-black);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* ======================================================================= */
 /* ================================ BUTTONS ============================== */
 button {
-  width: 165px;
+  width: 175px;
   height: auto;
   background-color: transparent;
   display: flex;
@@ -190,12 +210,13 @@ button {
 .button-leftpart-primary {
   border-radius: 8px 0px 0px 8px;
   left: 0;
-  width: 130px;
+  width: 140px;
   background: var(--gold-gradient);
-  height: 26px;
+  height: 30px;
   align-items: center;
   display: flex;
   justify-content: center;
+  font-size: 16px;
 }
 
 .button-rightpart-primary {
@@ -203,7 +224,7 @@ button {
   right: 0;
   width: 30px;
   background: var(--gold-gradient);
-  height: 26px;
+  height: 30px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -242,14 +263,15 @@ button {
 }
 .hero-btn,
 .gradient-border-mask {
-  width: 185px;
-  height: 40px;
+  width: 195px;
+  height: 45px;
   font-family: var(--primary_font);
   cursor: pointer;
   justify-content: center;
   align-items: center;
   position: relative;
   text-transform: uppercase;
+  font-size: 16px;
 }
 
 .hero-btn {
@@ -268,7 +290,6 @@ button {
     margin: 0;
     width: 210px;
     height: 45px;
-    font-size: 15px;
   }
 }
 .gradient-border-mask::before {
@@ -407,8 +428,13 @@ button {
   }
 }
 .lang-item a img {
-  width: 25px !important;
+  width: 30px !important;
   height: auto !important;
+}
+@media screen and (min-width: 672px) and (max-width: 950px) and (min-width: 951px) {
+  .lang-item a img {
+    width: 25px !important;
+  }
 }
 
 #dropdownmenu {
@@ -831,8 +857,18 @@ footer {
 
 /* ----------------- FRONT PAGE - OPENING HOURS SECTION ------------------ */
 .opening-hours-section {
-  margin: 100px auto;
+  margin: 70px auto;
   text-align: center;
+}
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-section {
+    margin: 100px auto;
+  }
+}
+@media screen and (min-width: 951px) {
+  .opening-hours-section {
+    margin: 100px auto;
+  }
 }
 
 .opening-hours-container {
@@ -840,11 +876,11 @@ footer {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
-  gap: 30px 30px;
+  gap: 30px 0px;
   grid-auto-flow: row;
   grid-template-areas: "monday tuesday" "wednesday thursday" "friday saturday" "sunday sunday";
-  width: 100%;
-  margin: 20px 0;
+  width: 90%;
+  margin: auto;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
@@ -852,8 +888,10 @@ footer {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
-    gap: 15px;
+    gap: 10px;
     grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+    width: 100%;
+    margin: 20px 0;
   }
 }
 @media screen and (min-width: 951px) {
@@ -861,8 +899,11 @@ footer {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
-    gap: 30px 48px;
+    /* gap: 30px 48px; */
+    gap: 0 30px;
     grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+    width: 100%;
+    margin: 20px 0;
   }
 }
 .sunday {
@@ -887,7 +928,7 @@ footer {
   }
 }
 .opening-hours-days {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 8px;
 }
 
@@ -899,7 +940,7 @@ footer {
 }
 @media screen and (min-width: 951px) {
   .opening-hours-days {
-    font-size: 22px;
+    font-size: 24px;
     margin-bottom: 10px;
   }
 }
@@ -907,6 +948,19 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+.opening-hours-time p {
+  font-size: 16px;
+}
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-time p {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 951px) {
+  .opening-hours-time p {
+    font-size: 16px;
+  }
 }
 
 /* ======================================================================= */
@@ -1023,7 +1077,7 @@ footer {
 .products-slideshow {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 90% 10%;
   grid-template-areas: "productsSlideImg productsSlideImg" "slideshow-arrow-left slideshow-arrow-right";
   height: 390px;
 }
