--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,33 +99,12 @@ header {
   /* -------------------------------- COLORS ------------------------------- */
   --primary-black: #1c1c1c;
   --secondary-black: #262626;
-  --black-gradient: -webkit-linear-gradient(
-    180deg,
-    #1c1c1c,
-    #303030,
-    #1c1c1c,
-    #303030,
-    #1c1c1c
-  );
+  --black-gradient: -webkit-linear-gradient(180deg, #1c1c1c, #303030, #1c1c1c, #303030, #1c1c1c);
   --white: #ffffff;
   --secondary-white: #ececec;
-  --red: #c20203;
-  --gold-gradient: -webkit-linear-gradient(
-    100deg,
-    #ceac68,
-    #ceac68,
-    #f0d4a4,
-    #ceac68,
-    #ceac68
-  );
-  --gold-gradient-hover: -webkit-linear-gradient(
-    100deg,
-    #a98c54,
-    #a98c54,
-    #d0b990,
-    #a98c54,
-    #a98c54
-  );
+  // --red: #c20203;
+  --gold-gradient: -webkit-linear-gradient(100deg, #ceac68, #ceac68, #f0d4a4, #ceac68, #ceac68);
+  --gold-gradient-hover: -webkit-linear-gradient(100deg, #a98c54, #a98c54, #d0b990, #a98c54, #a98c54);
   --box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%);
   --grey-hover: #bcbcbc;
   --grey-active: #4d4d4d;
@@ -210,9 +189,29 @@ a {
 }
 
 /* ======================================================================= */
+/* =============================== SCROLLBAR ============================= */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--black-transparent);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--secondary-black);
+  border-radius: 20px;
+  border: 2px solid var(--primary-black);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* ======================================================================= */
 /* ================================ BUTTONS ============================== */
 button {
-  width: 165px;
+  width: 175px;
   height: auto;
   background-color: transparent;
   display: -webkit-box;
@@ -231,9 +230,9 @@ button {
 .button-leftpart-primary {
   border-radius: 8px 0px 0px 8px;
   left: 0;
-  width: 130px;
+  width: 140px;
   background: var(--gold-gradient);
-  height: 26px;
+  height: 30px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -243,6 +242,7 @@ button {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  font-size: 16px;
 }
 
 .button-rightpart-primary {
@@ -250,7 +250,7 @@ button {
   right: 0;
   width: 30px;
   background: var(--gold-gradient);
-  height: 26px;
+  height: 30px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -317,8 +317,8 @@ button {
 
 .hero-btn,
 .gradient-border-mask {
-  width: 185px;
-  height: 40px;
+  width: 195px;
+  height: 45px;
   font-family: var(--primary_font);
   cursor: pointer;
   -webkit-box-pack: center;
@@ -329,6 +329,7 @@ button {
   align-items: center;
   position: relative;
   text-transform: uppercase;
+  font-size: 16px;
 }
 
 .hero-btn {
@@ -347,7 +348,6 @@ button {
     margin: 0;
     width: 210px;
     height: 45px;
-    font-size: 15px;
   }
 }
 
@@ -361,13 +361,7 @@ button {
   border-radius: 5px;
   border: 2px solid transparent;
   background: var(--gold-gradient) border-box;
-  -webkit-mask: -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #fff)
-      )
-      padding-box,
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) padding-box,
     -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
@@ -378,13 +372,7 @@ button {
   border-radius: 5px;
   border: 3px solid transparent;
   background: var(--gold-gradient-hover) border-box;
-  -webkit-mask: -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #fff)
-      )
-      padding-box,
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) padding-box,
     -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
@@ -542,8 +530,14 @@ button {
 }
 
 .lang-item a img {
-  width: 25px !important;
+  width: 30px !important;
   height: auto !important;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) and (min-width: 951px) {
+  .lang-item a img {
+    width: 25px !important;
+  }
 }
 
 #dropdownmenu {
@@ -576,7 +570,7 @@ button {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 10px 2%;
+  padding: 10px 4%;
   height: 62px;
   background-color: var(--primary-black);
 }
@@ -587,6 +581,7 @@ button {
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    padding: 10px 2%;
   }
 }
 
@@ -630,7 +625,7 @@ button {
 }
 
 .top-menu li {
-  padding: 8px 0;
+  padding: 15px 0;
 }
 
 @media screen and (min-width: 951px) {
@@ -648,6 +643,34 @@ button {
 
 .active {
   color: var(--grey-active);
+}
+
+.top-menu a {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .top-menu a {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .top-menu a {
+    font-size: 14px;
+  }
+}
+
+.dropdownmenuBg {
+  background-color: var(--black-transparent);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 75px;
+  left: 0;
+  display: none;
+  z-index: 998;
+  backdrop-filter: blur(2px);
 }
 
 /* ------------------------- BURGER MENU SYMBOL -------------------------- */
@@ -815,6 +838,22 @@ footer {
     justify-content: space-between;
     padding: 0;
     gap: 35px;
+  }
+}
+
+.footer-menu a {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .footer-menu a {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .footer-menu a {
+    font-size: 14px;
   }
 }
 
@@ -1018,8 +1057,20 @@ footer {
 
 /* ----------------- FRONT PAGE - OPENING HOURS SECTION ------------------ */
 .opening-hours-section {
-  margin: 100px auto;
+  margin: 70px auto;
   text-align: center;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-section {
+    margin: 100px auto;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .opening-hours-section {
+    margin: 100px auto;
+  }
 }
 
 .opening-hours-container {
@@ -1030,11 +1081,11 @@ footer {
   -ms-grid-rows: 1fr 30px 1fr 30px 1fr 30px 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
-  gap: 30px 30px;
+  gap: 30px 0px;
   grid-auto-flow: row;
   grid-template-areas: "monday tuesday" "wednesday thursday" "friday saturday" "sunday sunday";
-  width: 100%;
-  margin: 20px 0;
+  width: 90%;
+  margin: auto;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
@@ -1044,8 +1095,10 @@ footer {
     -ms-grid-rows: 1fr;
     grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
-    gap: 15px;
+    gap: 10px;
     grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+    width: 100%;
+    margin: 20px 0;
   }
 }
 
@@ -1056,8 +1109,10 @@ footer {
     -ms-grid-rows: 1fr;
     grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
-    gap: 30px 48px;
+    gap: 0 30px;
     grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+    width: 100%;
+    margin: 20px 0;
   }
 }
 
@@ -1085,7 +1140,7 @@ footer {
 }
 
 .opening-hours-days {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 8px;
 }
 
@@ -1098,7 +1153,7 @@ footer {
 
 @media screen and (min-width: 951px) {
   .opening-hours-days {
-    font-size: 22px;
+    font-size: 24px;
     margin-bottom: 10px;
   }
 }
@@ -1114,6 +1169,22 @@ footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.opening-hours-time p {
+  font-size: 16px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-time p {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .opening-hours-time p {
+    font-size: 16px;
+  }
 }
 
 /* ======================================================================= */
@@ -1388,7 +1459,7 @@ footer {
     "other-treatments"
     "haircolor";
   width: 100%;
-  height: 1310px;
+  height: 1440px;
   margin: 20px auto 0 auto;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1403,7 +1474,7 @@ footer {
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .prices-grid {
-    height: 1260px;
+    height: 1350px;
   }
 }
 
@@ -1480,7 +1551,13 @@ footer {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin: 5px 0;
+  margin: 10px 0;
+}
+
+@media screen and (min-width: 951px) {
+  .price-category__item {
+    margin: 5px 0;
+  }
 }
 
 .service {
